# DNSCache

./: CMakeLists.txt  README.MD
examples/: example1.cpp
lib/: CMakeLists.txt  dns_cache.cpp  dns_cache.h
tests/: CMakeLists.txt  multithreads_test.cpp  onethread_test.cpp  singleton_test.cpp
